<resources>
    <string name="app_name" translatable="false">Maximus</string>
    <string name="title_home">Home</string>
    <string name="title_direct">Direct Messages</string>
    <string name="title_chats">Chats</string>
    <string name="title_storage">Storage</string>
    <string name="title_deleted">Deleted Media</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="media_observer_service">Media Observer Service</string>
    <string name="IMPORTANT_NOTIFICATION_CHANNEL">Important Notifications</string>
    <string name="MENTION_NOTIFICATION_CHANNEL">Mentions</string>
    <string name="ELITE_NOTIFICATION_CHANNEL">Elite Messages</string>
    <string name="DELETED_MEDIA_NOTIFICATION_CHANNEL">Deleted Media</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="name_input_dialog_text">Please put in the same name you used in whatsapp to get a notification when someone mentions you.\nCopy the exact name from Whatsapp with emojis (if used) for better results </string>
    <string name="title_more_options">More</string>
    <string name="no_results">Sorry!  No results found :(</string>

    <string name="onboarding_title_1">Important Messages</string>
    <string name="onboarding_title_2">Direct Message</string>
    <string name="onboarding_title_3">Elite Members</string>
    <string name="onboarding_title_4">Notifications</string>

    <string name="onboarding_message_1">Browse through your important messages that you might have missed during a conversation</string>
    <string name="onboarding_message_2">Now conveniently text an unknown number on whatsapp without saving it</string>
    <string name="onboarding_message_3">Select important contacts as Elite Members and directly view their messages</string>
    <string name="onboarding_message_4">Get notified when someone sends an important message or mentions you, so you dont miss out on something important</string>

    <string name="not_found">Not found</string>
    <string name="delete">Delete</string>
    <string name="close">close</string>
    <string name="rotate">Rotate</string>
    <string name="download">Download</string>
    <string name="allow_access">Allow Access</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="done">DONE</string>
    <string name="sender">Sender</string>
    <string name="sample_date">27/12/2000</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome_message">Before proceeding, there are a few things we\'d like to request for this app to work properly.</string>
    <string name="your_whatsapp_username">Your Whatsapp Username</string>
    <string name="include_all_emojis_and_symbols">Include all emojis and symbols</string>
    <string name="group_name">Group Name</string>
    <string name="options">Options</string>
    <string name="store_messages">Store Messages</string>
    <string name="members">Members</string>
    <string name="logo">LOGO</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="view_as">View as</string>
    <string name="share">Share</string>
    <string name="select_all">Select All</string>
    <string name="keyword">Keyword</string>
    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>
    <string name="contact_us_info">Have any suggestions or queries? We\'d love to hear it from you. You can write to us directly at yashkasera@icloud.com or you can use the form below :</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="filter1">If the message contains :</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="email_addresses">Email addresses</string>
    <string name="date">Date</string>
    <string name="filter2">Length > 500 characters</string>
    <string name="filter3">Red Dot 🔴</string>
    <string name="sticker">sticker</string>
    <string name="important_messages">Important Messages</string>
    <string name="welcome1">Browse through your important messages that you might have missed during a conversation</string>
    <string name="faqs">FAQs</string>
    <string name="view_on_site">View on Site</string>
    <string name="enable_filter">Enable filter</string>
    <string name="filter_all_links">Filter all links</string>
    <string name="filter_all_except_blacklisted">Filter all except blacklisted</string>
    <string name="filter_only_whitelisted">Filter only whitelisted</string>
    <string name="don_t_filter_links">Don\'t filter links</string>
    <string name="whitelisted">Whitelisted</string>
    <string name="all_links">All links</string>
    <string name="blacklisted">Blacklisted</string>
    <string name="sent_by_all">Sent By : All</string>
    <string name="important">important</string>
    <string name="spammer">spammer</string>
    <string name="whatsapp_logo">Whatsapp Logo</string>
    <string name="direct_message">Tired of saving numbers to your Contacts for sharing just a line of text? We have a solution for that. Use our direct message feature to directly send message to a number without saving it in your phone</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="message_optional">Message (Optional)</string>
    <string name="status_downloader">Status Downloader</string>
    <string name="additional_features">Additional Features</string>
    <string name="deleted_media">Deleted Media</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_app_data">This will delete all the messages and media you have downloaded through this app. This includes status video downloads, deleted media and all the messages.\nThis action cannot be undone. Do you still want to proceed?</string>
    <string name="clear_data">This will clear all the groups,members and messages (including pinned and important) and resets the status of al the members.\nThis action cannot be undone. Do you still want to proceed?</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="other_apps">Other Apps</string>
    <string name="free_space">Free Space</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="gifs">GIFs</string>
    <string name="voice_notes">Voice Notes</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="stickers">Stickers</string>
    <string name="_0_b">0 B</string>
    <string name="view_full_text">View Full Text</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="type">Type</string>
    <string name="number">Number</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="no_result_found">No Results Found!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
</resources>