<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@style/body1" />

    <RelativeLayout
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/type"
            android:src="@drawable/ic_call_incoming" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toStartOf="@id/time"
            android:layout_toEndOf="@id/type"
            android:text="@string/number"
            android:textAppearance="@style/heading2" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toStartOf="@id/time"
            android:layout_toEndOf="@id/type"
            android:text="@string/duration"
            android:textAppearance="@style/subtitle1" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/time"
            android:textAppearance="@style/body2" />

    </RelativeLayout>
</LinearLayout>