<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/not_found"
        android:src="@drawable/ic_not_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:clickable="true"
        android:contentDescription="@string/options"
        android:tooltipText="Show Options"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic__arrow_up" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="2dp"
        android:background="#8BC34A"
        android:clickable="true"
        android:contentDescription="@string/download"
        android:tooltipText="Delete"
        android:visibility="visible"
        app:backgroundTint="#8BC34A"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab1"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_file_download_24" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="2dp"
        android:background="#8BC34A"
        android:clickable="true"
        android:contentDescription="@string/share"
        android:tooltipText="View Expenses"
        android:visibility="visible"
        app:backgroundTint="#8BC34A"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_share_24" />


    <TextView
        android:id="@+id/hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        app:layout_constraintBottom_toBottomOf="@+id/fab2"
        app:layout_constraintEnd_toStartOf="@+id/fab2"
        app:layout_constraintTop_toTopOf="@+id/fab2" />

    <TextView
        android:id="@+id/hint3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="@+id/fab3"
        app:layout_constraintEnd_toStartOf="@+id/fab3"
        app:layout_constraintTop_toTopOf="@+id/fab3" />

    <ImageButton
        android:id="@+id/close"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <ImageButton
        android:id="@+id/rotate"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rotate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_rotate_right_24" />


</androidx.constraintlayout.widget.ConstraintLayout>