<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.craft404.maximus.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.craft404.maximus.ui.group.GroupFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_recycler_view">
        <action
            android:id="@+id/action_navigation_groups_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_navigation_groups_to_groupInfoFragment"
            app:destination="@id/groupInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_direct"
        android:name="com.craft404.maximus.ui.directMessage.DirectMessageFragment"
        android:label="@string/title_direct"
        tools:layout="@layout/fragment_direct_message" />
    <fragment
        android:id="@+id/navigation_more_options"
        android:name="com.craft404.maximus.ui.MoreOptionsFragment"
        android:label="@string/title_more_options"
        tools:layout="@layout/fragment_more_options"/>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.craft404.maximus.ui.chats.ChatFragment"
        android:label="Chats"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="groupId"
            app:argType="long" />
        <action
            android:id="@+id/action_chatFragment_to_navigation_groups"
            app:destination="@id/navigation_groups" />
        <action
            android:id="@+id/action_chatFragment_to_groupInfoFragment"
            app:destination="@id/groupInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/groupInfoFragment"
        android:name="com.craft404.maximus.ui.groupInfo.GroupInfoFragment"
        android:label="Group Info"
        tools:layout="@layout/fragment_group_info">
        <argument
            android:name="groupId"
            app:argType="long" />
        <action
            android:id="@+id/action_groupInfoFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_groupInfoFragment_to_navigation_groups"
            app:destination="@id/navigation_groups" />
    </fragment>

</navigation>