<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.OtherFilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter1"
            android:textAppearance="@style/heading2"
            android:textSize="24sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:switchTextAppearance="@style/body1"
            android:text="@string/phone_numbers"
            android:textColor="@color/textColorPrimary"
            android:textAppearance="@style/body1" />

        <TextView
            android:id="@+id/phone_helper"
            android:layout_width="match_parent"
            android:textColor="@color/textColorSecondary"
            android:layout_height="wrap_content"
            android:text="If a message contains a phone number, the message will be marked as important \neg. My phone number is - +91 9876543210"
            android:textAppearance="@style/body2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:gravity="bottom"
            android:switchTextAppearance="@style/body1"
            android:text="@string/email_addresses"
            android:textAppearance="@style/body1" />

        <TextView
            android:id="@+id/email_helper"
            android:textColor="@color/textColorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="If a message contains an email address, the message will be marked as important \neg. Send the document at abc@xyz.com"
            android:textAppearance="@style/body2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textColor="@color/textColorPrimary"  android:switchTextAppearance="@style/body1"
            android:text="@string/date"
            android:textAppearance="@style/body1" />

        <TextView
            android:id="@+id/date_helper"
            android:layout_width="match_parent"
            android:textColor="@color/textColorSecondary"
            android:layout_height="wrap_content"
            android:text="If a message contains a date, the message will be marked as important \neg. Submit the project before 17/05/2021"
            android:textAppearance="@style/body2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/lengthy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"  android:gravity="bottom"
            android:switchTextAppearance="@style/body1"
            android:text="@string/filter2"
            android:textAppearance="@style/body1" />

        <TextView
            android:id="@+id/lengthy_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorSecondary"
            android:text="If a message contains more than 500 characters."
            android:textAppearance="@style/body2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/red_emoji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:switchTextAppearance="@style/body1"
            android:textColor="@color/textColorPrimary"
            android:text="@string/filter3"
            android:textAppearance="@style/body1" />

        <TextView
            android:id="@+id/red_emoji_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/red_emoji"
            android:textColor="@color/textColorSecondary"
            android:text="If a message contains a red dot (🔴), the message will be marked as important \neg.\n🔴🔴🔴🔴🔴🔴\nDont forget to hand over the reports today"
            android:textAppearance="@style/body2" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="Are we missing something or do you want us to add a filter? Please feel free to send your suggestions via email at yashkasera@icloud.com"
            android:textAlignment="center"
            android:textAppearance="@style/body2"
            android:textColorLink="@color/colorAccent" />
    </LinearLayout>


</ScrollView>