<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MoreOptionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <Button
                android:id="@+id/faqs"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_question_answer_24"
                android:drawableTint="@color/textColorPrimary"
                android:padding="16dp"
                android:text="@string/faqs"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/textColorPrimary" />

            <Button
                android:id="@+id/privacy_policy"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_privacy_tip_24"
                android:drawableTint="@color/textColorPrimary"
                android:padding="16dp"
                android:text="@string/privacy_policy"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/textColorPrimary" />

            <Button
                android:id="@+id/terms_of_use"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawableTint="@color/textColorPrimary"
                android:padding="16dp"
                android:text="@string/terms_of_use"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/textColorPrimary" />

            <Button
                android:id="@+id/contact_us"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_round_headset_mic_24"
                android:drawableTint="@color/textColorPrimary"
                android:padding="16dp"
                android:text="@string/contact_us"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>