<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card_background_color"
    app:contentPadding="@dimen/margin_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/icon"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:textAppearance="@style/heading2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toStartOf="@id/important"
            android:layout_toEndOf="@id/constraintLayout"
            android:text="@string/name"
            android:textAppearance="@style/body1" />

        <ImageView
            android:id="@+id/important"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/important"
            android:src="@drawable/ic_crown"
            android:visibility="gone"
            app:tint="@color/orange" />

        <ImageView
            android:id="@+id/spammer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/spammer"
            android:padding="2dp"
            android:src="@android:drawable/ic_dialog_alert"
            android:visibility="gone"
            app:tint="#F44336" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>